# external_libgit2

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  lookaside.txt
resources/libgit2_cmake/: CMakeLists.txt
resources/libgit2_cmake/include_android_armeabi_gcc/git2/sys/: features.h
resources/libgit2_cmake/include_linux_amd64_gcc/git2/sys/: features.h
resources/libgit2_cmake/include_linux_armhf_gcc/git2/sys/: features.h
resources/libgit2_cmake/include_macosx_amd64_clang/git2/sys/: features.h
resources/libgit2_cmake/include_windows_amd64_msvc/git2/sys/: features.h
resources/libgit2_cmake/include_windows_i386_msvc/git2/sys/: features.h
test/: CMakeLists.txt  libgit2_test.cpp
